Fix tribe member deletion and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,11 @@ dist-ssr/
 # OS
 .DS_Store
 Thumbs.db
+# Debug logs and temporary scripts
+*.log
+backend/*.log
+backend/debug_hit.txt
+backend/repro_*.py
+backend/check_*.py
+backend/test_*.py
+backend/inspect_db.py
